--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
   padding: 18px 16px;
   text-decoration: none;
   font-size: 17px;
+  color: #ffffff;
 }
 .footer {
   background: #2699FB;
@@ -57,6 +58,7 @@
   padding: 10px;
   color: #ffffff;
   margin-right: 20px;
+  width: 100%;
 }
 .logo {
   position: absolute;
