--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,29 @@
   height: 40vmin;
   pointer-events: none;
 }
+.Wrapper {
+  display: flex;
+  max-width: 1400px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.Content {
+  width: 70%;
+  display: flex;
+  padding-left: 12px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 12px;
+}
+.Sidebar {
+  width: 30%;
+  padding-top: 20px;
+  padding-right: 12px;
+}
+.SmallColumn {
+  width: 50%;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -39,12 +62,20 @@
 
 .navbar {
   background-color: #2699FB;
-  float: right;
   width: 100%;
   height: 60px;
 }
+.navwrapper {
+  display: flex;
+  max-width: 1400px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menuitems {
+  margin-left: auto;
+}
 .menuitems a {
-  float: right;
   text-align: center;
   padding: 18px 16px;
   text-decoration: none;
@@ -65,7 +96,6 @@
 }
 .navbar img{
   width: 150px;
-  margin-left: 20px;
 }
 .navbar img, .navbar {
   display: inline-block;
