--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,73 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
+}
+
+.background {
+  background-color: #111111;
+  color: #ffffff;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-.Wrapper {
-  display: flex;
-  max-width: 1400px;
-  width: 100%;
+.Container {
   margin-left: auto;
   margin-right: auto;
+  max-width: 1400px;
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1.5fr 1.5fr;
+  grid-template-areas:
+  'MainContent MainContent Sidebar'
+  'Content1 Content2 Sidebar'
+  ;
+  grid-gap: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
-.Content {
-  width: 70%;
-  display: flex;
-  padding-left: 12px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 12px;
+.MainContent {
+  grid-area: MainContent;
+}
+.Content1 {
+  grid-area: Content1;
+}
+.Content2 {
+  grid-area: Content2;
 }
 .Sidebar {
-  width: 30%;
-  padding-top: 20px;
-  padding-right: 12px;
-}
-.SmallColumn {
-  width: 50%;
+  grid-area: Sidebar;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width:900px){
+  .Container{
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.4fr 0.4fr 2.2fr 0.4fr;
+    grid-template-areas:
+      "MainContent"
+      "Content1"
+      "Content2"
+      "Sidebar"
   }
 }
 
 .navbar {
-  background-color: #2699FB;
+  background-color: #212121;
   width: 100%;
   height: 60px;
 }
 .navwrapper {
   display: flex;
+  align-items: center;
   max-width: 1400px;
   width: 100%;
   margin-left: auto;
@@ -83,7 +84,7 @@
   color: #ffffff;
 }
 .footer {
-  background: #2699FB;
+  background-color: #212121;
   color:#FFFFFF;
   text-align: center;
   padding: 10px;
@@ -91,13 +92,27 @@
   margin-right: 20px;
   width: 100%;
 }
-.logo {
-  position: absolute;
-}
 .navbar img{
   width: 150px;
 }
 .navbar img, .navbar {
   display: inline-block;
   vertical-align: middle;
+}
+.button1 {
+  background-color: #ffc600;
+  border: none;
+  color: #000000;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.button1:hover {
+  background-color: #ffffff;
+  color: #000000;
 }
